# tree-sitter-mocha

./: .gitignore  Cargo.toml  binding.gyp  grammar.js  makefile  package.json  source.ff
bindings/node/: binding.cc  index.js
bindings/rust/: lib.rs
queries/: highlights.scm
src/: grammar.json  node-types.json  parser.c
test/highlight/: keywords.ff
