[package]
name = "tree-sitter-mocha"
description = "mocha grammar for the tree-sitter parsing library"
version = "0.0.1"
keywords = ["incremental", "parsing", "mocha"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/tree-sitter/tree-sitter-mocha"
edition = "2018"
license = "MIT"

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = "~0.20.3"
tree-sitter-highlight = "0.19"

[build-dependencies]
cc = "1.0"
